# geo-marching-squares-rs

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  JAVA_ANALYSIS.md  JAVA_PORT_REFERENCE.md  LICENSE-APACHE  LICENSE-MIT  NEXT_STEPS.md  OPTIMIZATION_PLAN.md  PHASE4_RESULTS.md  README.md
benches/: marching_squares_bench.rs
examples/: interpolation_comparison.rs  phase2_demo.rs  simple_contours.rs
src/: cell_shapes.rs  edge_tracing.rs  error.rs  grid.rs  interpolation.rs  lib.rs  marching_squares.rs  polygon_util.rs  simd_ops.rs  types.rs
src/cell_shapes/: hexagons.rs  mod.rs  pentagons.rs  rectangles.rs  saddles.rs  square.rs  trapezoids.rs  triangles.rs
tests/: integration_test.rs
